--- a/v3/src/js/views/timetable/TimetableActions.scss
+++ b/v3/src/js/views/timetable/TimetableActions.scss
@@ -1,8 +1,9 @@
 @import './_variables.scss';
 
 .actionIcon {
-  width: 1rem;
-  height: 1rem;
+  display: block;
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .verticalMode {
