--- a/v3/src/js/views/timetable/TimetableModulesTable.scss
+++ b/v3/src/js/views/timetable/TimetableModulesTable.scss
@@ -1,9 +1,16 @@
 @import './_variables.scss';
 
-:global(.btn).btn {
+// :global(.btn) for additional specificity
+:global(.btn).moduleAction {
   height: 1.25rem;
   padding: 0.15rem 0.4rem;
   font-size: 1em;
+  color: $gray-light;
+  cursor: pointer;
+
+  &:hover {
+    color: inherit;
+  }
 }
 
 .eyeIcon {
